fix user experience
